# MSL-X

./: .gitignore  PluginEntry.py  README.md  console.py  main.py  pyproject.toml  requirements.txt
Config/: Default.json
Plugins/: CustomFrpFrame.py  example.py  search_java_like_mcsl.py
Plugins/tools/: EventTools.py  Exceptions.py  InfoClasses.py  PluginList.py  PluginTools.py  lib.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _coverpage.md  _sidebar.md  index.html
docs/Developing/: Developing.md  _sidebar.md
lib/: aria2ctl.py  confctl.py  default_info.py  download.py  info_classes.py  log.py  pubvars.py
lib/crypt/: RSA.py
lib/downloadm/: aira2ctl.py  download.py
ui/: Navbar.py  confcl.py  frpconfig.py  gen_passwd.py  login.py  logs.py  nginxconf.py  settings.py
